Added english, arabic support. updated the layout. added settings page and other features.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.0",
     "chart.js": "^4.4.8",
     "firebase": "^9.22.1",
+    "lucide-react": "^0.503.0",
     "postcss": "^8.4.24",
     "postcss-cli": "^10.1.0",
     "react": "^18.2.0",
